google fontのweb.demoでの引用を修正

--- a/web.demo.html
+++ b/web.demo.html
@@ -11,6 +11,9 @@
     <!--<script src="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.js"></script>-->
     <script src="./katex/katex.min.js"></script>
 
+    <link href='https://fonts.googleapis.com/css?family=Noto+Serif+JP:400&display=swap&subset=japanese' rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Noto+Serif+JP:700&display=swap&subset=japanese' rel="stylesheet">
+
     <link rel="stylesheet" type="text/css" href="./style/nt.web.css" id="nt_web_css">
     <link rel="stylesheet" type="text/css" href="./style/notoserif.css" id="main_css">
     <link rel="stylesheet" type="text/css" href="./style/nt.print.css" media="all" id="nt_print_css">
