--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <div class="title1"><img src="icon256x256.png" /></div>
     <div class="title1">NowType</div>
     <div class="title2">a Markdown Editor</div>
-</div><!--
---><div class="contents"><h1>What is NowType</h1>
+</div>
+<div class="contents"><h1>What is NowType</h1>
 <p>
 <strong>NowType</strong> is a Markdown editor with <strong>WYSIWYG</strong>(What You See Is What You Get) style.
 Several extention of markdown is adopted, such as mathematical format with LaTeX. 
