update website link for release

--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@ The source code of NowType is opened under the MIT License.
 NowType runs as desktop application on Windows, Mac OS, and Linux.
 To build for these Cross-Platform OS, <a href="https://nodejs.org/">Node.js</a> and <a href="https://www.electronjs.org/">Electron</a>.
 </p>
-<p>Binary distribution is comming soon.</p>
-
+<p>Binary apps download from <a href="https://github.com/atsushi-m-ito/nowtype/releases">Github release</a>.</p>
 
 <h1>Web Application</h1>
 <p>
