--- a/web.demo.html
+++ b/web.demo.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="utf-8">
-    <title>Now Type: a markdown editor (on web)</title>
+    <title>NowType: a markdown editor (on web)</title>
     <link rel="icon" href="./favicon.ico">
 
     <!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.css">-->
@@ -18,9 +18,9 @@
 </head>
 <body>
 <div id="toolbar" style="position: fixed; top: 0px; left: 0px; margin: 0; width: 100%; height: 32px; background: #c0dcff">
-    <!--<div class="logo">Now Type</div>-->
-    <img src="./favicon.ico" width="32px" height="32px" style="display:inline;margin: 0px; padding: 0px; vertical-align: middle;" />
-    <div class="version">ver. 0.3.27 (Web)</div>
+    
+    <a href="./intex.html"><img src="./favicon.ico" width="32px" height="32px" style="display:inline;margin: 0px; padding: 0px; vertical-align: middle;" /></a>
+    <div class="version">ver. 0.3.28 (Web)</div>
     <input type="file" id="file_open" />
     <button type="button" class="intLink" name="save" onclick="TestSave();">Save (DL)</button>
     
