--- a/web.demo.html
+++ b/web.demo.html
@@ -19,7 +19,7 @@
 <body>
 <div id="toolbar" style="position: fixed; top: 0px; left: 0px; margin: 0; width: 100%; height: 32px; background: #c0dcff">
     
-    <a href="./intex.html"><img src="./favicon.ico" width="32px" height="32px" style="display:inline;margin: 0px; padding: 0px; vertical-align: middle;" /></a>
+    <a href="./index.html"><img src="./favicon.ico" width="32px" height="32px" style="display:inline;margin: 0px; padding: 0px; vertical-align: middle;" /></a>
     <div class="version">ver. 0.3.28 (Web)</div>
     <input type="file" id="file_open" />
     <button type="button" class="intLink" name="save" onclick="TestSave();">Save (DL)</button>
