--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <div class="title1">NowType</div>
     <div class="title2">a Markdown Editor</div>
 </div>
-<div class="contents"><h1>What is NowType</h1>
+<div class="contents">
+<h1>What is NowType</h1>
 <p>
 <strong>NowType</strong> is a Markdown editor with <strong>WYSIWYG</strong>(What You See Is What You Get) style.
 Several extention of markdown is adopted, such as mathematical format with LaTeX. 
@@ -57,5 +58,15 @@ NowType will provides Javascript API. You can integrate NowType in your web page
 <p>NowType is open source project. You can find <a href="https://github.com/atsushi-m-ito/nowtype">repository in Github</a>.</p>
 <p>License of source code is MIT License</p>
 <p>Copyright (c) 2019-2020 Atsushi M. Ito</p>
+
+
+<h1>Privacy Policy</h1>
+<ul>
+    <li>NowType and developer do not collect any personal information or privacy-related information about user.</li>
+    <li>NowType and developer do not collect information of keyboard typing by user.</li>
+    <li>NowType and developer do not collect the information of files opened by NowType.</li>        
+</ul>
+
+</div>
 </body>
 </html>
