--- a/index.html
+++ b/index.html
@@ -28,7 +28,14 @@ The source code of NowType is opened under the MIT License.
 NowType runs as desktop application on Windows, Mac OS, and Linux.
 To build for these Cross-Platform OS, <a href="https://nodejs.org/">Node.js</a> and <a href="https://www.electronjs.org/">Electron</a>.
 </p>
-<p>Binary apps download from <a href="https://github.com/atsushi-m-ito/nowtype/releases">Github release</a>.</p>
+<p>Binary apps download from: 
+    <ul>
+        <li>Microsoft Store for Windows 10 (free). App from the Microsoft Store is not blocked by smart screen because it is provided with code signing certificate. 
+            <a href="https://www.microsoft.com/store/apps/9PL1WVW33P4Q?cid=storebadge&ocid=badge"><img src='images/English_get-it-from-MS_864X312.svg' alt='English badge' style='width: 284px; height: 104px; vertical-align: middle;'/></a>
+        </li>
+        <li><a href="https://github.com/atsushi-m-ito/nowtype/releases">Github release (free)</a></li>
+    </ul>
+</p>
 
 <h1>Web Application</h1>
 <p>
