--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <div class="title1">NowType</div>
     <div class="title2">a Markdown Editor</div>
 </div>
-<div class="contents"><h1>What is NowType</h1>
+<div class="contents">
+<h1>What is NowType</h1>
 <p>
 <strong>NowType</strong> is a Markdown editor with <strong>WYSIWYG</strong>(What You See Is What You Get) style.
 Several extention of markdown is adopted, such as mathematical format with LaTeX. 
@@ -27,7 +28,14 @@ The source code of NowType is opened under the MIT License.
 NowType runs as desktop application on Windows, Mac OS, and Linux.
 To build for these Cross-Platform OS, <a href="https://nodejs.org/">Node.js</a> and <a href="https://www.electronjs.org/">Electron</a>.
 </p>
-<p>Binary apps download from <a href="https://github.com/atsushi-m-ito/nowtype/releases">Github release</a>.</p>
+<p>Binary apps download from: 
+    <ul>
+        <li>Microsoft Store for Windows 10 (free). App from the Microsoft Store is not blocked by smart screen because it is provided with code signing certificate. 
+            <a href="https://www.microsoft.com/store/apps/9PL1WVW33P4Q?cid=storebadge&ocid=badge"><img src='images/English_get-it-from-MS_864X312.svg' alt='English badge' style='width: 284px; height: 104px; vertical-align: middle;'/></a>
+        </li>
+        <li><a href="https://github.com/atsushi-m-ito/nowtype/releases">Github release (free)</a></li>
+    </ul>
+</p>
 
 <h1>Web Application</h1>
 <p>
@@ -57,5 +65,15 @@ NowType will provides Javascript API. You can integrate NowType in your web page
 <p>NowType is open source project. You can find <a href="https://github.com/atsushi-m-ito/nowtype">repository in Github</a>.</p>
 <p>License of source code is MIT License</p>
 <p>Copyright (c) 2019-2020 Atsushi M. Ito</p>
+
+
+<h1>Privacy Policy</h1>
+<ul>
+    <li>NowType and developer do not collect any personal information or privacy-related information about user.</li>
+    <li>NowType and developer do not collect information of keyboard typing by user.</li>
+    <li>NowType and developer do not collect the information of files opened by NowType.</li>        
+</ul>
+
+</div>
 </body>
 </html>
