--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ The source code of NowType is opened under the MIT License.
 <h1>Cross-Platform Desktop Application</h1>
 <p>
 NowType runs as desktop application on Windows, Mac OS, and Linux.
-To build for these Cross-Platform OS, <a href="https://nodejs.org/">Node.js</a> and <a href="https://www.electronjs.org/">Electron</a>.
+To build for these Cross-Platform OS, <a href="https://nodejs.org/">Node.js</a> and <a href="https://www.electronjs.org/">Electron</a> are emplyied.
 </p>
 <p>Binary apps download from: 
     <ul>
