--- a/web.demo.html
+++ b/web.demo.html
@@ -208,6 +208,7 @@
 <script src="./src/nt.katex_auto_num.js"></script>
 <script src="./src/nt.init_math.js"></script>
 <script src="./src/nt.str_replace.js"></script>
+<script src="./src/nt.str_comparison.js"></script>
 <script src="./src/nt.md2dom.js"></script>
 <script src="./src/nt.dom2md.js"></script>
 <script src="./src/nt.dom2tex.js"></script>
