--- a/web.demo.html
+++ b/web.demo.html
@@ -20,7 +20,7 @@
 <div id="toolbar" style="position: fixed; top: 0px; left: 0px; margin: 0; width: 100%; height: 32px; background: #c0dcff">
     
     <a href="./index.html"><img src="./favicon.ico" width="32px" height="32px" style="display:inline;margin: 0px; padding: 0px; vertical-align: middle;" /></a>
-    <div class="version">ver. 0.4.12 (Web)</div>
+    <div class="version">ver. 0.4.27 (Web)</div>
     <input type="file" id="file_open" />
     <button type="button" class="intLink" name="save" onclick="TestSave();">Save (DL)</button>
     
@@ -208,6 +208,7 @@
 <script src="./src/nt.katex_auto_num.js"></script>
 <script src="./src/nt.init_math.js"></script>
 <script src="./src/nt.str_replace.js"></script>
+<script src="./src/nt.str_comparison.js"></script>
 <script src="./src/nt.md2dom.js"></script>
 <script src="./src/nt.dom2md.js"></script>
 <script src="./src/nt.dom2tex.js"></script>
